style.css
html {
    height: 100vh;
    background-color: #050505;
    font-family: "Terminal", sans-serif;
    font-size: 20px;
    text-align: center;
    color: #c1cfe3;
    text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
    
    position: relative;
    background: url(./images/full-station.jpg) center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover; }

body {
    height: 100vh;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    flex-wrap: wrap;
    align-items: stretch;
    margin: 0;
}
    
.title {
    display: flex;
    justify-content: center;
    align-items: center;
    padding-top: 25px;
}

.title__button {
    border: none; 
    background-color: transparent; 
    color:goldenrod; 
    text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
    font-size:16px; 
    text-align: center; 
    padding-left: 40px;
    padding-right: 40px;
    cursor: pointer;
}

.settings {
    font-size: 20px;
    color: #c1cfe3;
    text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
    border: none;
    background-color: transparent; 
    padding-bottom: 10px;
    cursor: pointer;
}

.feedback {
    font-size: 18px;
    color: #FF6161;
}

.journal {
    width: 225px;
    flex: 9 1 auto;
    text-align: left;
    padding-top: 5px;
    padding-right: 10px;
    padding-left: 20px;
    margin-left: 250px;
}

.choices {
    color: goldenrod;
    font-size: 20px;
    text-align: left;
    border: none;
    background-color: transparent;
    padding-bottom: 10px;
    cursor: pointer;
    text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
}

.menu {
    height: 99%;
    width: 250px;
    flex: 1 1 auto;
    color: #c1cfe3;
    justify-content: flex-end;
    flex-direction: column;
    position: fixed;
    align-items: flex-end;
    padding-top: 5px;
    backdrop-filter: blur(3px); }
.menu__settings {
    height: 40%; }
.menu__stats {
    height: 45%; }
.menu__links {
    height: 2%; }

a:link {
    color: #5CA3FF;
    text-decoration: none; }
a:visited {
    color: #5CA3FF; }

.hud{
    font-size: 15px; }
.hud__health{
    color: #FF6161 }
.hud__oxygen{
    color: aqua; }
.hud__profit{
    color:goldenrod; }

.mobile_hud { display: none; }

.tooltip {
    position: relative;
    display: inline-block;
    color:aqua;
    border-bottom: 1px dotted aqua;
}

.tooltip .tooltiptext {
    display: none;
    visibility: hidden;
    width: 250px;
    backdrop-filter: blur(5px);
    text-align: center;
    border-radius: 6px;
    word-wrap: normal;
    padding: 5px 0;
    position: absolute;
    z-index: 1;
    top: -5px;
    right: 105%;
}

.tooltip:hover .tooltiptext {
    display: inline-block;
    visibility: visible;
}

.reference { 
    height: 100vh;
    max-width: 405px;
}

.image_ref {
    width: 30%;
}


@media only screen and (max-width: 480px) {
    html {background: url(./images/mobile-station.jpg) center center;}

    .menu { display: none; }

    .reference { display: none; }

    .image_ref { display:none; }

    .journal {
        width: 225px;
        text-align: justify;
        padding-top: 10px;
        padding-left: 10px;
        padding-right: 10px;
        padding-bottom: 125px;
        margin-left: 0%;
    }

    .mobile_feedback {
        color: #FF6161;
    }

    .choices {
        text-align: center;
    }

    .hud { display: none; }

    .mobile_hud {
        position: fixed;
        display: flex;
        flex-direction: row;
        justify-content: flex-start;
        left: 0;
        bottom: 0;
        width: 100%;
        backdrop-filter: blur(3px);
        background-color: transparent;  }
    .mobile_hud__health{
        color:#FF6161;
        text-align: right;
        padding-right: 10px; }
    .mobile_hud__oxygen{
        color: aqua;
        text-align: right;
        padding-right: 10px; }
    .mobile_hud__profit{
        color:goldenrod;
        text-align: right;
        padding-right: 10px; }

    .mobile_settings {
        color: #C7C7C7;
        text-align: left;
        border: none;
        background-color: transparent;
        font-weight: bold;
        font-family: "Terminal", sans-serif;
        padding: 0px;
        padding-left: 10px;
        font-size: 20px;
    }
    
    table {
        text-align: left;
        width: 100%;
    }

    .tooltip .tooltiptext {
        width: 180px;
        top: 100%;
        left: 50%;
        margin-left: -60px;
    }
}

